--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit_learn==1.4.2
-scikit_learn==1.3.2
-scikit_surprise==1.1.4
-streamlit==1.32.0
-streamlit==1.37.0
-//python==3.10
+numpy>=1.26.3
+pandas>=2.1.0
+scikit-learn>=1.4.0
+streamlit>=1.37.0
